0.05
 - Fix Makefile.PL and use lib.
 - Fix stations on multiple lines.
 - Improve SYNOPSIS section in doc.
 - Rename and regen image.
 - Update Module::Install to 1.21 version.
 - Update copyright years.

0.04 2017-11-22T08:53:42+01:00
 - Add test for ok_map_functions().
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Remove bad test.
 - Update Module::Install to 1.18 version.
 - Update author name.
 - Update copyright years to 2017.
 - Update to Map::Tube 3.41.

0.03 2015-11-05T11:54:56+01:00
 - Add EXAMPLE5 section to doc.
 - Implement station order.
 - Rewrite XML map to new version with line IDs.
 - Update example/ex3.pl and README files.

0.02 2015-10-16T10:07:56+02:00
 - Add EXAMPLE4 to doc.
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Add lines to XML document.
 - Add test of map validity.
 - Add tests for get_line_by_id(), get_line_by_name(), get_lines(),
   get_node_by_id(), get_node_by_name() and get_stations() methods.
 - Fix minimal version of Perl to 5.6.0.
 - Improve description for get_lines() in doc.
 - Move author tests to xt/ directory.
 - Rewrite SEE ALSO section to new style.
 - Update Module::Install to 1.16 version.
 - Update images/ex3.png to reality.
 - Update to Map::Tube 3.06.

0.01 2015-02-15T15:11:47+01:00
 - First version