@@ -1,6 +1,7 @@
 0.05
  - Fix Makefile.PL and use lib.
  - Fix stations on multiple lines.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
  - Rename and regen image.
  - Update Module::Install to 1.21 version.
